// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Successfully retrieve block boundaries controlTest 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 2,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 8,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 10,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 12,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 18,
  },
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
	",
    "offset": 19,
  },
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
		",
    "offset": 35,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "
",
    "offset": 60,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "
",
    "offset": 60,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 79,
  },
]
`;

exports[`Successfully retrieve block boundaries emptyLineAtStartOrEnd 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
	",
    "offset": 0,
  },
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
		",
    "offset": 5,
  },
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
			",
    "offset": 22,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 49,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 49,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 49,
  },
]
`;

exports[`Successfully retrieve block boundaries indentedBraces 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "",
    "offset": 0,
  },
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
	",
    "offset": 3,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 5,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 11,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "
",
    "offset": 12,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 30,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 38,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 39,
  },
]
`;

exports[`Successfully retrieve block boundaries multilineBracedBlock 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 2,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 8,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 28,
  },
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
	",
    "offset": 29,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 45,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 45,
  },
]
`;

exports[`Successfully retrieve block boundaries multilineBracedBlock2 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 2,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 8,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 28,
  },
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "
	",
    "offset": 29,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 45,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 45,
  },
]
`;

exports[`Successfully retrieve block boundaries multilineBracedBlock3 1`] = `
Array [
  Object {
    "blockType": "Indent",
    "direction": "start",
    "matchText": "",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 0,
  },
  Object {
    "blockType": "Braces",
    "direction": "start",
    "matchText": "(",
    "offset": 2,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 8,
  },
  Object {
    "blockType": "Braces",
    "direction": "end",
    "matchText": ")",
    "offset": 28,
  },
  Object {
    "blockType": "Indent",
    "direction": "end",
    "matchText": "",
    "offset": 46,
  },
]
`;
